fixed todo breaking layout if too long

--- a/src/components/Todo/styles.module.css
+++ b/src/components/Todo/styles.module.css
@@ -1,4 +1,12 @@
 .todo {
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  word-break: break-word;
+}
+
+.container {
   display: flex;
   align-items: center;
   gap: 8px;
